--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 </head>
 <body>
     <img src="assets/header_0fdd3fdf-3dcc-4466-8a28-4cbcc02a2c6e.jpg" alt="Menu">
+    <img src="assets/hero_51f6ca4a-043f-4384-bf2d-0276833261fc.jpg" alt="Slide Mock">
 </body>
 </html>
