--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
 <body>
     <img src="assets/header_0fdd3fdf-3dcc-4466-8a28-4cbcc02a2c6e.jpg" alt="Menu">
     <img src="assets/hero_51f6ca4a-043f-4384-bf2d-0276833261fc.jpg" alt="Slide Mock">
+    <img src="assets/acustica_395abf3a-d46e-4f19-a9cc-ddee140e6597.jpg" alt="">
+    <img src="assets/clasica_0663a6aa-2c83-4435-8530-357480d5a950.webp" alt="">
 </body>
 </html>
