--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 
     <style>
     body {
-        margin: 0;
+        margin: 0px;
     }
 
     img {
         max-width: 100%;
+        display: block;
     }
     
     </style>
