--- a/index.html
+++ b/index.html
@@ -14,13 +14,23 @@
     img {
         max-width: 100%;
     }
+
+    img#responsive {
+        display: none;
+    }
     
+
+    @media screen and (max-width: 768px) {
+        img#responsive {
+            display: block;
+        }
+    }
     </style>
 </head>
 <body>
-    <img src="assets/header_0fdd3fdf-3dcc-4466-8a28-4cbcc02a2c6e.jpg" alt="Menu">
-    <img src="assets/hero_51f6ca4a-043f-4384-bf2d-0276833261fc.jpg" alt="Slide Mock">
-    <img src="assets/acustica_395abf3a-d46e-4f19-a9cc-ddee140e6597.jpg" alt="">
-    <img src="assets/clasica_0663a6aa-2c83-4435-8530-357480d5a950.webp" alt="">
+  <img src="assets/invie-responsive_9eaee446-2d8d-4cfb-92e1-c4038311af4a.png" id="responsive" alt="Imagen responsive del sitio">
+  <img src="assets/header_0fdd3fdf-3dcc-4466-8a28-4cbcc02a2c6e.jpg" alt="">
+  <img src="assets/hero_51f6ca4a-043f-4384-bf2d-0276833261fc.jpg" alt="">
+  <img src="assets/acustica_395abf3a-d46e-4f19-a9cc-ddee140e6597.jpg" alt="">
 </body>
 </html>
