--- a/index.html
+++ b/index.html
@@ -5,32 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Basic HTML structure</title>
-
-    <style>
-    body {
-        margin: 0px;
-    }
-
-    img {
-        max-width: 100%;
-        display: block;
-    }
-
-    img#responsive {
-        display: none;
-    }
-    
-
-    @media screen and (max-width: 768px) {
-        img#responsive {
-            display: block;
-        }
-    }
-    </style>
 </head>
 <body>
-<h1>Invie site</h1>
-  <img src="assets/invie-responsive_9eaee446-2d8d-4cfb-92e1-c4038311af4a.png" id="responsive" alt="Imagen responsive del sitio">
-    <img src="assets/nueva-version_9f363cfa-19b8-46fa-b494-eb06ed40d34b.jpg" alt="">
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="" alt="" class="logo__img">
+            </div>
+            <ul class="list">
+                <li class="list__item list__item--hover">Stories</li>
+                <li class="list__item">Events</li>
+                <li class="list__item">Places</li>
+                <li class="list__item">Boards</li>
+            </ul>
+        </nav>
+
+    </header>
 </body>
 </html>
