Basic Markup Structure

--- a/index.html
+++ b/index.html
@@ -4,22 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Basic HTML structure</title>
+    <title>Porfolio</title>
+
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">
-                <img src="" alt="" class="logo__img">
-            </div>
-            <ul class="list">
-                <li class="list__item list__item--hover">Stories</li>
-                <li class="list__item">Events</li>
-                <li class="list__item">Places</li>
-                <li class="list__item">Boards</li>
+            <ul>
+                <li>
+                    <a href="#">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#">About Me</a>
+                </li>
+                <li>
+                    <a href="#">Let's work together</a>
+                </li>
             </ul>
         </nav>
-
     </header>
+    <section>
+        <h1>
+            Hi! I'm Maria Paulina <span>UI Designer</span>. 
+        </h1>
+    </section>
+    <section>
+        <h2>Portfolio</h2>
+        <article>
+            <h3>Project 1</h3>
+            <h6>Text description</h6>
+            <p><a href="#">See Project</a></p>
+        </article>
+        <article>
+            <h3>Project 2</h3>
+            <h6>Text Description</h6>
+            <p><a href="#"> See Project </a></p>
+        </article>
+    </section>
+    <section>
+        <h2>About Me</h2>
+        <article>
+            <figure>
+                <img src="" alt="Img Description">
+            </figure>
+            <h3>Description</h3>
+            <p>This is a description tag</p>
+        </article>
+    </section>
+    <section>Contact Section</section>
+    <footer>Footer</footer>
 </body>
 </html>
