Add form to markup

--- a/html/index.html
+++ b/html/index.html
@@ -37,6 +37,13 @@
         <p>  This is a description Tag</p>
       </article>
     </section>
+    <section class="contact-me" id="contactMe">
+      <form action="/suscription">
+        <h2>Let's create something together</h2>
+        <input type="text" placeholder="Drop a line" id="email">
+        <button>Send</button>
+      </form>
+    </section>
     <footer id="footer"></footer>
   </body>
 </html>
